--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "homepage": "https://github.com/pontifechs/BlackJackStack",
   "dependencies": {
+    "6to5": "^3.5.3",
+    "alt": "^0.13.1",
+    "core-js": "^0.5.2",
     "express": "^4.11.2",
-    "flummox": "^2.5.0",
-    "react": "^0.12.2",
-    "requirejs": "^2.1.16"
+    "image-webpack-loader": "^1.2.0",
+    "imagemin": "^3.1.0",
+    "react": "^0.12.2"
   },
   "devDependencies": {
     "6to5-core": "^3.5.3",
